--- a/src/app/pages/dte/template/edit/template-edit.component.html
+++ b/src/app/pages/dte/template/edit/template-edit.component.html
@@ -28,7 +28,8 @@
           <div fxFlex class="p-16 h3">Pertanyaan</div>
           <div fxFlex="80" fxLayoutAlign="flex-end flex-end">
             <div fxFlex class="p-16 h3" style="margin-bottom: 10px;">
-              <mat-checkbox [formControl]="isIRTemplate">Template IR</mat-checkbox>
+              <mat-checkbox [formControl]="isIRTemplate" [disabled]="this.frmQuiz.value === 'quiz'">Template IR
+              </mat-checkbox>
             </div>
             <div fxFlex class="p-16 h3" style="margin-bottom: 10px;">
               <mat-checkbox [formControl]="shareable">Shareable Link</mat-checkbox>
@@ -647,7 +648,7 @@
                 <div fxFlex="48" *ngIf="frmQuiz.value === 'quiz'" style="margin-left: 35px;">
                   <span>Jumlah Koin</span>
                   <mat-form-field fxFlex="25" class="question is-light" style="margin-left: 5px;">
-                    <input matInput type="number" formControlName="coin">
+                    <input matInput type="number" formControlName="coin" min="0">
                   </mat-form-field>
                 </div>
               </div>
