--- a/src/app/pages/user-management/private-label/pay-method/index/pay-method-index.component.html
+++ b/src/app/pages/user-management/private-label/pay-method/index/pay-method-index.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
-  <page-content-header [contentTitle]="'Metode Pembayaran'">
-  </page-content-header>
+  <!-- <page-content-header [contentTitle]="'Metode Pembayaran'">
+  </page-content-header> -->
 
   <div class="content p-24" *ngIf="!onLoad">
     <div class="table-wrapper p-8" >
