--- a/src/app/pages/user-management/private-label/supplier-settings/edit/stock-edit.component.html
+++ b/src/app/pages/user-management/private-label/supplier-settings/edit/stock-edit.component.html
@@ -14,7 +14,7 @@
             <span fxFlex="15" class="h6 text-semibold">Nama Produk</span>
             <span fxFlex="15" class="h6 text-semibold">Kategori</span>
             <span fxFlex="15" class="h6 text-semibold">Nama Perusahaan</span>
-            <span fxFlex="55" class="h6 text-semibold">Stock</span>
+            <span fxFlex="55" class="h6 text-semibold pl-8">Stock</span>
           </div>
         </mat-list-item>
         <mat-divider></mat-divider>
@@ -23,13 +23,16 @@
             <div fxFlex="15" >{{stockData.product_name}}</div>
             <div fxFlex="15" >{{stockData.category_name}}</div>
             <div fxFlex="15" >{{stockData.company_name}}</div>
-            <div fxFlex="55" >
+            <div fxFlex="55" class="pl-8">
               <div fxLayout="column" *ngIf="stockData.settings.length > 0">
                 <mat-checkbox [checked]="checkAll" class="payments-column" (change)="selectionAll($event)">Pilih Semua</mat-checkbox>
                 <div fxLayout="row wrap">
                   <div formArrayName="listStock" *ngFor="let stock of formStock.get('listStock')['controls']; let i = index;" class="payments-column" >
                     <div [formGroupName]="i">
-                      <mat-checkbox formControlName="value" [checked]="stock.value.value" class="pr-8">{{stock.value.name}}</mat-checkbox>
+                      <mat-checkbox formControlName="value" [checked]="stock.value.value" class="pr-8" *ngIf="stock.value.name == 'gsw_input'">Stock Input GSW</mat-checkbox>
+                      <mat-checkbox formControlName="value" [checked]="stock.value.value" class="pr-8" *ngIf="stock.value.name == 'gsw_input_mandatory'">Mandatory GSW</mat-checkbox>
+                      <mat-checkbox formControlName="value" [checked]="stock.value.value" class="pr-8" *ngIf="stock.value.name == 'gsr_input'">Stock Input GSR</mat-checkbox>
+                      <mat-checkbox formControlName="value" [checked]="stock.value.value" class="pr-8" *ngIf="stock.value.name == 'gsr_input_mandatory'">Mandatory GSR</mat-checkbox>
                     </div>
                   </div>
                 </div>
