--- a/src/app/pages/dte/task-verification/detail/task-verification-detail.component.html
+++ b/src/app/pages/dte/task-verification/detail/task-verification-detail.component.html
@@ -239,9 +239,22 @@
                     item.code}}</mat-option>
               </mat-select>
             </mat-form-field>
+          </div>
+          <div fxLayout="row wrap" fxLayoutAlign="start stretch" fxLayout.lt-md="column" class="p-16"
+            fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
             <mat-form-field fxFlex="12%" class="is-light form-primary">
-              <mat-select  placeholder="Status" [(ngModel)] = "statusValue" name = "statusValue"  [ngModelOptions]="{standalone: true}" multiple>
+              <mat-select  placeholder="Status Misi" [(ngModel)]="statusValue" name="statusValue"  [ngModelOptions]="{standalone: true}" multiple>
                 <mat-option [value]="wtLoop.value" *ngFor="let wtLoop of status"> {{wtLoop.label}} </mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select  placeholder="Status Coin" [(ngModel)]="statusCoinSelected" name="statusCoinSelected" [ngModelOptions]="{standalone: true}" multiple>
+                <mat-option [value]="scl.value" *ngFor="let scl of statusCoinList"> {{scl.label}} </mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select  placeholder="IR Check" [(ngModel)]="irCheckSelected" name="irCheckSelected" [ngModelOptions]="{standalone: true}" multiple>
+                <mat-option [value]="icl.value" *ngFor="let icl of irCheckList"> {{icl.label}} </mat-option>
               </mat-select>
             </mat-form-field>
           </div>
