--- a/src/app/pages/content-management/tnc/edit/tnc-edit.component.html
+++ b/src/app/pages/content-management/tnc/edit/tnc-edit.component.html
@@ -39,6 +39,14 @@
               </mat-error>
             </mat-form-field>
           </div>
+          <div fxLayout="row" *ngIf="formTnc.get('user').value === 'paylater-src'">
+            <mat-form-field fxFlex="50" class="is-light form-primary">
+              <mat-select formControlName="group_id" placeholder="Pilih Perusahaan">
+                <mat-option *ngFor="let item of companyList" [value]="item.id" style="text-transform: capitalize;">
+                  {{item.name}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
           <div class="pt-8" fxLayout="row" fxLayoutAlign="start center">
             <h3 class="">Konten Syarat & Ketentuan</h3>
           </div>
