--- a/src/app/pages/content-management/tnc/index/tnc-index.component.html
+++ b/src/app/pages/content-management/tnc/index/tnc-index.component.html
@@ -30,10 +30,12 @@
           </ng-template>
         </ngx-datatable-column>
         <ngx-datatable-column [width]="400" name="Grup Pengguna" prop="user"></ngx-datatable-column>
+        <ngx-datatable-column [width]="400" name="Perusahaan" prop="group_name"></ngx-datatable-column>
         <!-- <ngx-datatable-column name="Halaman Tujuan" prop="slug"></ngx-datatable-column> -->
 
         <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value" style="justify-content: center !important">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value"
+            style="justify-content: center !important">
             <div class="button-row" style="margin-left: -10px">
               <button mat-icon-button color="" matTooltip="Ubah" (click)="directEdit(row)">
                 <mat-icon class="secondary-text">edit</mat-icon>
