--- a/src/app/pages/dte/task-verification/index/task-verification-index.component.html
+++ b/src/app/pages/dte/task-verification/index/task-verification-index.component.html
@@ -31,8 +31,8 @@
               <mat-form-field fxFlex="16" floatLabel="never" class="orders datepicker is-light">
                 <input matInput #from [matDatepicker]="dari" (focus)="dari.open()" placeholder="Dari Tanggal"
                   formControlName="start_date" (dateChange)="setMinDate(formFilter.get('start_date').value)" readonly>
-                <button mat-button *ngIf="formFilter.get('start_date').value" matSuffix mat-icon-button aria-label="Clear"
-                  (click)="formFilter.get('start_date').setValue('')">
+                <button mat-button *ngIf="formFilter.get('start_date').value" matSuffix mat-icon-button
+                  aria-label="Clear" (click)="formFilter.get('start_date').setValue('')">
                   <mat-icon>close</mat-icon>
                 </button>
                 <mat-datepicker-toggle matSuffix [for]="dari">
@@ -67,11 +67,12 @@
           </form>
           <ngx-datatable class="material" style="border-top: 1px solid #e3e3e3" [rows]="rows"
             [loadingIndicator]="loadingIndicator" [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56"
-            [rowHeight]="auto" [scrollbarH]="true" [offset]="offsetPagination" [reorderable]="reorderable" [count]="pagination.total"
-            [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true" (page)="setPage($event)"
-            (sort)="onSort($event)">
-    
-            <ngx-datatable-column [width]="220" [sortable]="false" name="Nama Pengatur Jadwal Program" prop="nama_pengatur_jadwal_program" [flexGrow]="3">
+            [rowHeight]="auto" [scrollbarH]="true" [offset]="offsetPagination" [reorderable]="reorderable"
+            [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true"
+            (page)="setPage($event)" (sort)="onSort($event)">
+
+            <ngx-datatable-column [width]="220" [sortable]="false" name="Nama Pengatur Jadwal Program"
+              prop="nama_pengatur_jadwal_program" [flexGrow]="3">
               <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                 <!-- <span class="row-name" [routerLink]="['/dte', 'schedule-trade-program', 'detail', row.id]"> -->
                 <span class="row">
@@ -79,37 +80,46 @@
                 </span>
               </ng-template>
             </ngx-datatable-column>
-    
+
             <ngx-datatable-column [sortable]="false" name="Trade Program" prop="nama_trade_program" [flexGrow]="3">
             </ngx-datatable-column>
-    
-            <ngx-datatable-column [width]="195" [sortable]="false" name="Nama Group Trade Program" prop="nama_grup_trade_program" [flexGrow]="3">
+
+            <ngx-datatable-column [width]="195" [sortable]="false" name="Nama Group Trade Program"
+              prop="nama_grup_trade_program" [flexGrow]="3">
             </ngx-datatable-column>
-    
-            <ngx-datatable-column [width]="190" [sortable]="false" name="Nama Misi/Template Tugas" prop="nama_template" [flexGrow]="3">
+
+            <ngx-datatable-column [width]="190" [sortable]="false" name="Nama Misi/Template Tugas" prop="nama_template"
+              [flexGrow]="3">
             </ngx-datatable-column>
-    
+
+            <ngx-datatable-column [width]="190" [sortable]="false" name="Nama Lain Misi/Template Tugas"
+              prop="other_name_template" [flexGrow]="3">
+            </ngx-datatable-column>
+
+            <ngx-datatable-column [sortable]="false" name="Compliance Rate" prop="compliance_rate" [flexGrow]="3">
+            </ngx-datatable-column>
+
             <ngx-datatable-column [width]="200" [sortable]="false" name="Periode Misi" prop="start_date" [flexGrow]="3">
               <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                 <span>{{row.start_date | dateToMoment}} s/d {{ row.end_date | dateToMoment}}</span>
               </ng-template>
             </ngx-datatable-column>
-    
+
             <ngx-datatable-column [sortable]="false" name="Audience Group" prop="nama_audience_group" [flexGrow]="3">
             </ngx-datatable-column>
-    
+
             <ngx-datatable-column [sortable]="false" name="Verification Rate" prop="verification_rate" [flexGrow]="3">
             </ngx-datatable-column>
-    
+
             <ngx-datatable-column [width]="165" [sortable]="false" name="Status" prop="status_scheduler" [flexGrow]="3">
               <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                 <div class="name-container">
-                  <p class="status text-truncate h6 p-4 status-order mat-green-800-bg" style="text-transform: uppercase;"
-                    *ngIf="row.status_scheduler == 'publish'">
+                  <p class="status text-truncate h6 p-4 status-order mat-green-800-bg"
+                    style="text-transform: uppercase;" *ngIf="row.status_scheduler == 'publish'">
                     {{row.status_scheduler}}
                   </p>
-                  <p class="status text-truncate h6 p-4 status-order mat-yellow-900-bg" style="text-transform: uppercase;"
-                    *ngIf="row.status_scheduler == 'draft'">
+                  <p class="status text-truncate h6 p-4 status-order mat-yellow-900-bg"
+                    style="text-transform: uppercase;" *ngIf="row.status_scheduler == 'draft'">
                     {{row.status_scheduler}}
                   </p>
                   <p class="status text-truncate h6 p-4 status-order mat-red-900-bg" style="text-transform: uppercase;"
@@ -119,11 +129,11 @@
                 </div>
               </ng-template>
             </ngx-datatable-column>
-    
-    
+
+
             <ngx-datatable-column [sortable]="false" name="Status Coin" prop="status_coin" [flexGrow]="3">
             </ngx-datatable-column>
-    
+
             <ngx-datatable-column [width]="250" name="Tindakan" headerClass="textright" [sortable]="false">
               <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                 <div class="button-row" style="margin-left: -10px">
@@ -134,7 +144,8 @@
                   </button>
                   <button type="button" mat-icon-button color=""
                     [routerLink]="['/dte', 'taskverification', 'edit', row.id]"
-                    [disabled]="row?.status_berjalan !== 'no' || !permission?.ubah" matTooltip="Ubah Tanggal Penjadwalan">
+                    [disabled]="row?.status_berjalan !== 'no' || !permission?.ubah"
+                    matTooltip="Ubah Tanggal Penjadwalan">
                     <mat-icon class="secondary-text">update</mat-icon>
                   </button>
                   <button type="button" mat-icon-button color="" [disabled]="row.status_scheduler !== 'publish'"
@@ -142,11 +153,14 @@
                     <mat-icon *ngIf="row.status_scheduler == 'publish'" class="orange-500-fg">save_alt</mat-icon>
                     <mat-icon *ngIf="row.status_scheduler !== 'publish'" class="secondary-text">save_alt</mat-icon>
                   </button>
-                  <button type="button" mat-icon-button color="" matTooltip="Verified All" (click)="openConfirmDialog(row, 'Verification All Mission')" [disabled]="isDisableVerification(row)">
+                  <button type="button" mat-icon-button color="" matTooltip="Verified All"
+                    (click)="openConfirmDialog(row, 'Verification All Mission')"
+                    [disabled]="isDisableVerification(row)">
                     <mat-icon *ngIf="!isDisableVerification(row)" class="orange-500-fg">assignment_turned_in</mat-icon>
                     <mat-icon *ngIf="isDisableVerification(row)" class="secondary-text">assignment_turned_in</mat-icon>
                   </button>
-                  <button type="button" mat-icon-button color="" matTooltip="Release Coin" (click)="openConfirmDialog(row, 'Release Coin On Index')" [disabled]="isDisableReleaseCoin(row)">
+                  <button type="button" mat-icon-button color="" matTooltip="Release Coin"
+                    (click)="openConfirmDialog(row, 'Release Coin On Index')" [disabled]="isDisableReleaseCoin(row)">
                     <mat-icon *ngIf="!isDisableReleaseCoin(row)" class="orange-500-fg">call_made</mat-icon>
                     <mat-icon *ngIf="isDisableReleaseCoin(row)" class="secondary-text">call_made</mat-icon>
                   </button>
