--- a/src/app/pages/dte/template/create/template-create.component.html
+++ b/src/app/pages/dte/template/create/template-create.component.html
@@ -52,6 +52,11 @@
               </mat-error>
             </mat-form-field>
           </div>
+          <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto" style="margin-top: 5px;">
+            <mat-form-field fxFlex="100" class="question is-light secondary-text">
+              <input matInput style="font-size: 13px;" formControlName="other_name" placeholder="Nama Lain Misi">
+            </mat-form-field>
+          </div>
           <div class="" fxLayout="row" fxLayoutAlign="start center">
             <h3 class="">Deskripsi Tugas</h3>
           </div>
