--- a/src/app/pages/dte/template/edit/template-edit.component.html
+++ b/src/app/pages/dte/template/edit/template-edit.component.html
@@ -62,6 +62,12 @@
             </mat-form-field>
           </div>
 
+          <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto" style="margin-top: 5px;">
+            <mat-form-field fxFlex="100" class="question is-light secondary-text">
+              <input matInput style="font-size: 13px;" formControlName="other_name" placeholder="Nama Lain Misi">
+            </mat-form-field>
+          </div>
+
           <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
             <mat-form-field fxFlex="100" class="descInput exportTextarea desc-template" floatLabel="never">
               <!-- <textarea matInput formControlName="description" (focus)="$event.target.select()" (change)="defaultValue($event, 'description', 'Deskripsi Tugas')"
