Cognito UI login

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -31,7 +31,7 @@
               </mat-form-field>
             </div>
 
-            <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+            <div *ngIf="showExternalUserFields" fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
               <mat-form-field class="is-light form-primary">
                 <input matInput type="text" *ngIf="showPassword" formControlName="password" placeholder="Kata Sandi">
                 <input matInput type="password" *ngIf="!showPassword" formControlName="password" placeholder="Kata Sandi">
@@ -45,7 +45,7 @@
               </mat-form-field>
             </div>
 
-            <div class="remember-forgot-password" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
+            <div *ngIf="showExternalUserFields" class="remember-forgot-password" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
               <mat-checkbox class="remember-me red" [formControl]="rememberMe" aria-label="Remember Me">
                 Ingat Saya
               </mat-checkbox>
