--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,7 +6,7 @@
   <li><span></span></li>
   <li><span></span></li>
 </ul> -->
-<div *ngIf="!nternalSigningIn" style="position: absolute; left: 50%; top: 50%;">
+<div *ngIf="!internalSigningIn" style="position: absolute; left: 50%; top: 50%;">
   <mat-progress-spinner mode="indeterminate" diameter="32" style="margin-left: auto; margin-right: auto;"></mat-progress-spinner>
   <h2>Signing In</h2>
 </div>
