--- a/src/app/pages/pay-later/pay-later-panel/pay-later-panel-import-dialog/pay-later-panel-import-dialog.component.html
+++ b/src/app/pages/pay-later/pay-later-panel/pay-later-panel-import-dialog/pay-later-panel-import-dialog.component.html
@@ -43,10 +43,12 @@
             <th nowrap>Kode Divisi</th>
             <th nowrap>Wilayah</th>
             <th nowrap>Area</th>
+            <th nowrap>Valid</th>
+            <th nowrap>Alasan Tidak Valid</th>
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let item of rows">
+          <tr *ngFor="let item of rows" [ngClass]="{'invalid-row': (!item.valid)}">
             <td nowrap>
               {{ item.name ? item.name : '-' }}
             </td>
@@ -67,6 +69,12 @@
             </td>
             <td nowrap>
               {{ item.area ? item.area : '-' }}
+            </td>
+            <td nowrap>
+              {{ (item.valid) ? 'Ya' : 'Tidak' }}
+            </td>
+            <td nowrap>
+              {{ !item.valid ? item.message : '-' }}
             </td>
           </tr>
           <tr *ngIf="rows.length === 0">
